Changed Identity Service

--- a/dockerstack-application/Services/AuthService/Dockerfile
+++ b/dockerstack-application/Services/AuthService/Dockerfile
@@ -4,18 +4,16 @@ EXPOSE 80
 
 FROM microsoft/dotnet:2.1-sdk AS build
 WORKDIR /src
-COPY ../../../MyMicroservicesApplication.sln ./MyMicroservicesApplication.sln
-COPY ./NuGet.Config ./
-COPY ["../AuthService/AuthService.csproj", "dockerstack-application/Services/AuthService/"]
-RUN dotnet restore "dockerstack-application/Services/AuthService/AuthService.csproj"
+COPY ../../Services/Identity/Identity.Service.csproj ../../Services/Identity/
+RUN dotnet restore ../../Services/Identity/Identity.Service.csproj
 COPY . .
-WORKDIR "/src/dockerstack-application/Services/AuthService"
-RUN dotnet build "AuthService.csproj" -c Release -o /app
+WORKDIR /src/../../Services/Identity
+RUN dotnet build Identity.Service.csproj -c Release -o /app
 
 FROM build AS publish
-RUN dotnet publish "AuthService.csproj" -c Release -o /app
+RUN dotnet publish Identity.Service.csproj -c Release -o /app
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
-ENTRYPOINT ["dotnet", "AuthService.dll"]
+ENTRYPOINT ["dotnet", "Identity.Service.dll"]
