--- a/dockerstack-application/Services/AuthService/AuthService.csproj
+++ b/dockerstack-application/Services/AuthService/AuthService.csproj
@@ -1,31 +1,38 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <DockerTargetOS>Linux</DockerTargetOS>
+    <DockerComposeProjectPath>..\..\Solutions\Complete Solution\docker-compose.dcproj</DockerComposeProjectPath>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
   </PropertyGroup>
 
 
   <ItemGroup>
-    <None Remove="logs\internal-nlog.txt" />
+    <PackageReference Include="IdentityServer4.EntityFramework" Version="2.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.3" />
+    <PackageReference Include="Novell.Directory.Ldap.NETStandard2_0" Version="3.1.0" />
+     <PackageReference Include="Serilog" Version="2.7.1" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />    
+    <PackageReference Include="IdentityServer4" Version="2.2.0" />
+    <PackageReference Include="IdentityServer4.AspNetIdentity" Version="2.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.4" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.1" />
-    <PackageReference Include="Agility.Framework.Caching" Version="10.6.0.1" />
-    <PackageReference Include="Agility.Framework.Core" Version="10.6.0.1" />
-    <PackageReference Include="Agility.Framework.IdentityServer.Core" Version="10.6.0.1" />
-    <PackageReference Include="Agility.Framework.Localization" Version="10.6.0.1" />
-    <PackageReference Include="Agility.Framework.Logging" Version="10.6.0.1" />
-    <PackageReference Include="Agility.Framework.Oracle" Version="10.6.0.1" />
-    <PackageReference Include="Agility.Framework.SqlServer" Version="10.6.0.1" />
-    <PackageReference Include="Agility.Framework.Web.Security" Version="10.6.0.1" />
-    <PackageReference Include="Agility.Framework.Web" Version="10.6.0.1" />
-    <PackageReference Include="Agility.Framework.Web.Core" Version="10.6.0.1" />
-    <!--<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.1.1" />-->
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" PrivateAssets="All" />
+    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
-<ItemGroup>
-  <Folder Include="logs\" />
-</ItemGroup>  
+
+  <ItemGroup>
+    <Content Update="Data.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Helper\" />
+  </ItemGroup>
+
 </Project>
